@@ -11,4 +11,14 @@ return [
         'value' => '',
         'area' => 'dashamail_main',
     ],
+    'merge_fields' => [
+        'xtype' => 'textfield',
+        'value' => '',
+        'area' => 'dashamail_main',
+    ],
+    'checkbox_name' => [
+        'xtype' => 'textfield',
+        'value' => 'dmsubscription',
+        'area' => 'dashamail_main',
+    ],
 ];
